# Sniper

./: .editorconfig  .gitignore  DISTRIBUTED.md  Dockerfile  Makefile  README.md  SUMMARY.md  TODO.md  docker-compose.distributed.yml  docker-compose.yml  manual_test_sandbox.sh  pull_request_template.md  pyproject.toml  pytest.ini  run_distributed.py  run_distributed_simple.py  run_master.py  run_worker.py  run_worker_simple.py  run_worker_typer.py  scan_juiceshop.py  setup_sandbox_test.sh  test_distributed.py  test_url_filter.py  vulnerability_scan_results.json
.cursor/rules/: sniper-rules.mdc
app/core/: plugin_manager.py
app/plugins/: __init__.py
config/: custom_tools.yaml  distributed.yaml  scan_modes.yaml  scan_modes.yml  tools.yaml
config/custom_tools/: aircrackng.yaml  amass.yaml  autopsyforensics.yaml  bettercap.yaml  bloodhound.yaml  brutespray.yaml  checkov.yaml  crowdsec.yaml  cutter.yaml  dalfox.yaml  dnsrecon.yaml  feroxbuster.yaml  ffuf.yaml  frida.yaml  gasmask.yaml  ghidra.yaml  gitleaksci.yaml  gobuster.yaml  googletsunami.yaml  hakrawler.yaml  httpx.yaml  jwt_tool.yaml  lokiscanner.yaml  masscan.yaml  metasploit.yaml  mispthreatsharing.yaml  mobsf.yaml  naabu.yaml  nikto.yaml  nuclei.yaml  nucleitemplates.yaml  openvas.yaml  owasp_dependency_check.yaml  puredns.yaml  qualys.yaml  radare2.yaml  searchsploit.yaml  semgrep.yaml  shodan.yaml  sn1per.yaml  (+12 more)
config/scan_modes_examples/: continuous_integration.yaml  supply_chain.yaml
config/tools/: amass.yaml  bloodhound.yaml  commix.yaml  crackmapexec.yaml  dirsearch.yaml  ffuf.yaml  gobuster.yaml  httprobe.yaml  httpx.yaml  metasploit.yaml  nikto.yaml  nmap.yaml  nuclei.yaml  report_generator.yaml  searchsploit.yaml  sqlmap.yaml  sslyze.yaml  subfinder.yaml  sublist3r.yaml  wappalyzer.yaml  waybackurls.yaml  wpscan.yaml  xsstrike.yaml  zap.yaml
data/: example_findings.json
docker/: build_tools.sh  docker-compose.tools.yml
docker/dirsearch/: Dockerfile
docker/subfinder/: Dockerfile
docs/: CONTRIBUTING.md  TESTING.md  TODO.md  autonomous_testing.md  current_sprint.md  custom_scan_modes_guide.md  custom_tools.md  distributed.md  distributed_architecture.md  docker.md  implementation_notes.md  ml_capabilities.md  ml_module.md  plugin_development.md  pre_sprint7_preparation.md  quickstart.md  reporting.md  roadmap.md  sandbox.md  scan_modes.md  specifications.md  url_filter.md  user_guide.md
docs/distributed/: architecture-guide.md  architecture.md  auto-scaling.md  deployment-guide.md  implementation_plan.md  protocol-guide.md  task_distribution.md
docs/howto/: api_usage.md  autonomous_testing.md  cli_usage.md  distributed_scanning.md  docker_deployment.md  index.md  installation.md  integrating_tools.md  ml_capabilities.md  payload_mutation.md  report_generation.md  running_scans.md  safe_exploitation.md  tool_orchestration.md  using_api.md  using_cli.md  using_distributed_scanning.md  using_ml.md  using_reporting.md  using_scan_modes.md
docs/integrations/: owasp_zap.md  sublist3r.md  wappalyzer.md
docs/reports/: tool_analysis_report.md
docs/sprints/: sprint5-summary.md  sprint5.md  sprint_5.md
docs/tools/: docker_tools.md  reconnaissance.md  web_scanning.md
examples/: README_visualization.md  autonomous_test_client.py  autonomous_testing_demo.py  distributed_example.py  generate_report.py  ml_model_training.py  predict_vulnerabilities.py  sample_findings.json  sample_result.json  scan_results.json  test_phase_recommendations.py  visualize_results.py
examples/reports/: detailed_report.html  executive_report.html  standard_report.html
reports/cli_test/: index.html
reports/sample/: index.html
scripts/: check_plugins.py  convert_tools_config.py  fix_zap_dependency.py  generate_custom_scan_mode.py  generate_sample_report.py  get_plugin_status.py  install_tools.py  migrate_tools_config.py  test_pattern_learning.py  test_tool_loader.py  tools_analysis.py
src/: __init__.py
src/api/: main.py
src/cli/: __init__.py  custom_tools.py  distributed.py  distributed_client.py  distributed_typer.py  distributed_typer_simple.py  main.py  ml.py  report.py  scan.py  scan.py.bak  scan.py.fixed  task_submitter.py  tools.py
src/core/: __init__.py  config.py  exceptions.py  findings.py  logging.py  logging_config.py  scan_mode_manager.py  validation.py
src/distributed/: __init__.py  __main__.py  aggregation.py  api.py  auto_scaling.py  autodiscovery.py  base.py  client.py  distribution.py  manager.py  master.py  protocol.py  rest.py  worker.py  worker_metrics.py
src/integrations/: __init__.py  base.py  dirsearch.py  docker_utils.py  executors.py  nmap.py  owasp_zap.py  subfinder.py  sublist3r.py  url_filter.py  vulnerability_scanner.py  wappalyzer.py  zap.py
src/ml/: __init__.py  autonomous_tester.py  model.py  pattern_learning.py  prediction.py  risk_scoring.py  smart_recon.py  tool_selection.py  url_prioritizer.py  utils.py
src/payloads/: __init__.py  mutation_engine.py  mutator.py  sql_injection.py
src/recon/: dns_enum.py  port_scanner.py  ssl_analyzer.py  subdomain_finder.py  tech_fingerprint.py  types.py  whois_info.py
src/reporting/: __init__.py  html_generator.py  html_report_renderer.py  report_generator.py  structured_report.py  structured_reporter.py  structured_reports.py
src/results/: __init__.py  loader.py  normalizer.py  types.py
src/tools/: __init__.py  manager.py
src/utils/: __init__.py  exceptions.py
tests/: conftest.py  test_tools_analysis.py
tests/cli/: __init__.py  conftest.py  custom_test_tool.yaml  test_ai_smart_scan_mode.py  test_custom_tools.py  test_distributed_commands.py  test_distributed_typer.py  test_dvwa_scan.py  test_dvwa_scan_mode.py  test_juiceshop_scan_mode.py  test_main.py  test_ml.py  test_report.py  test_sandbox_commands.py  test_scan.py  test_scan_modes.py  test_scan_validate.py  test_tools.py
tests/core/: conftest.py  test_config.py  test_logging.py  test_plugin_manager.py  test_scan_mode_manager.py  test_validation.py
tests/distributed/: conftest.py  test_aggregation.py  test_auto_scaling.py  test_client.py  test_distribution.py  (+2 more)
(+114 files in other folders)
