[tool.poetry]
name = "sniper-cli"
version = "0.1.0"
description = "Penetration Testing CLI Tool with ML"
authors = ["Your Name <you@example.com>"] # Placeholder - User should update this
readme = "README.md"
license = "MIT" # Consider if this is the desired license
packages = [{include = "src"}]

[tool.poetry.scripts]
sniper = "src.cli.main:app"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
requests = "^2.32.3"
typer = {extras = ["all"], version = "^0.12.3"}
rich = "^13.7.1"
pydantic = "^2.8.2"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
colorama = "^0.4.6"
numpy = "^1.26.2"
pandas = "^2.1.3"
matplotlib = "^3.8.2"
scikit-learn = "^1.3.2"
validators = "^0.34.0"
pydantic-settings = "^2.8.1"
jinja2 = "^3.1.2"
loguru = "^0.7.2"
aiohttp = "^3.9.5"
asyncio = "^3.4.3"
pytest = "^8.2.2"
httpx = "^0.27.0"
fastapi = "^0.111.1"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
markdown = "^3.6"
# API Dependencies
flask = "^3.0.3"
flask-cors = "^4.0.1"
flask-limiter = "^3.7.0"

# Optional dependencies for specific tool integrations
zaproxy = {version = "^0.4.0", optional = true}
wappalyzer = {version = "^1.0.12", optional = true} # Requires Firefox and geckodriver
nltk = "^3.9.1"
joblib = "^1.4.2"
psutil = "^7.0.0"
setuptools = "^78.1.0"
tabulate = "^0.9.0"
beautifulsoup4 = "^4.13.4"
python-owasp-zap-v2-4 = "^0.1.0"
autopep8 = "^2.3.2"
markdown2 = "^2.5.3"

[tool.poetry.extras]
zap = ["zaproxy"]
wappalyzer = ["wappalyzer"]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
isort = "^6.0.1"
mypy = "^1.15.0"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
flake8-pyproject = "^1.2.3"
pytest-asyncio = "^0.26.0"
# Add missing type stubs
types-requests = "^2.32.0.20240622"
types-pyyaml = "^6.0.12.20240311"
pandas-stubs = "^2.1.3.231111"
types-colorama = "^0.4.15.20240311"
types-tabulate = "^0.9.0.20240106"
types-markdown = "^3.6.0.20240529"
# More type stubs
# scikit-learn-stubs = "^1.3.2" # Removed, version issue
# types-flask = "^3.0.1.20240429" # Removed, version issue
# types-flask-cors = "^4.0.0.20240118" # Removed, version issue
# types-pdfkit = "^1.0.0.20240515" # Removed, not found on PyPI

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
exclude = ".git,__pycache__,docs/,build/,dist/,*.egg-info/,venv/"
per-file-ignores = [
    "__init__.py: F401",
    "src/cli/main.py: E501",
    "tests/core/test_logging.py: E501",
    "src/core/config.py: E501",
    "src/integrations/dirsearch.py: E501",
    "src/integrations/sublist3r.py: E501",
    "src/integrations/owasp_zap.py: E501",
    "tests/integrations/test_owasp_zap.py: E402", # Keep ignoring the import order issue
    "src/integrations/wappalyzer.py: E501",       # Ignore line length for wappalyzer src
    "tests/integrations/test_wappalyzer.py: E501",  # Ignore line length for wappalyzer tests
    "tests/integrations/test_sublist3r.py: E501",   # Ignore line length for sublist3r tests (comment)
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
# Add paths for mypy to check
exclude = ["venv"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src --cov-report=term-missing --cov-fail-under=80.5"
testpaths = [
    "tests",
]
pythonpath = [
    ".",  # Add current directory (project root) to PYTHONPATH
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto" 
[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = "."
